tr(newCI) make studio works in a Docker container (#1276)
* update Jenkinsfile
* fix memory management
* use zip format for installers

[CI-346](https://bonitasoft.atlassian.net/browse/CI-346)