@@ -252,6 +252,9 @@ public class UIDesignerServerManager {
                         : "\"" + locateUIDjar() + "\"" + System.getProperty("path.separator") + "\""
                                 + cpJar.getAbsolutePath() + "\"",
                 "org.apache.tomcat.maven.runner.Tomcat7RunnerCli",
+                "-Xmx256m",
+                "-XX:+UnlockExperimentalVMOptions",
+                "-XX:+UseCGroupMemoryLimitForHeap",
                 workspaceSystemProperties.getPageRepositoryLocation(),
                 workspaceSystemProperties.getWidgetRepositoryLocation(),
                 workspaceSystemProperties.getFragmentRepositoryLocation(),
